Made TestButton show selected brand and product in results

--- a/iottestbed.ui
+++ b/iottestbed.ui
@@ -41,7 +41,7 @@
           </item>
           <item>
            <property name="text">
-            <string>Nest Thermometer</string>
+            <string>Thermostat</string>
            </property>
           </item>
          </widget>
