--- a/iottestbed.ui
+++ b/iottestbed.ui
@@ -17,43 +17,52 @@
    <property name="toolTipDuration">
     <number>-1</number>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout" stretch="2,5">
     <item>
-     <layout class="QVBoxLayout" name="leftColumnLayout">
+     <layout class="QVBoxLayout" name="leftColumnLayout" stretch="1,0,1,0,1,0">
       <item>
-       <layout class="QVBoxLayout" name="choicesContainer">
-        <item>
-         <widget class="QLabel" name="categoriesLabel">
-          <property name="text">
-           <string>Category</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="categoriesCombo"/>
-        </item>
-        <item>
-         <widget class="QLabel" name="productsLabel">
-          <property name="text">
-           <string>Product</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="productsCombo"/>
-        </item>
-       </layout>
+       <widget class="QLabel" name="categoriesLabel">
+        <property name="text">
+         <string>Category</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+        </property>
+       </widget>
       </item>
       <item>
-       <widget class="QLabel" name="empty">
+       <widget class="QComboBox" name="categoriesCombo"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="productsLabel">
         <property name="text">
-         <string/>
+         <string>Product</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="productsCombo"/>
+      </item>
+      <item>
+       <widget class="QLabel" name="testsListLabel">
+        <property name="text">
+         <string>Tests</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QListWidget" name="testsListCombo">
+        <property name="styleSheet">
+         <string notr="true">background: whiteSmoke</string>
+        </property>
+        <property name="selectionMode">
+         <enum>QAbstractItemView::ExtendedSelection</enum>
         </property>
        </widget>
       </item>
