--- a/iottestbed.ui
+++ b/iottestbed.ui
@@ -44,7 +44,11 @@
        </widget>
       </item>
       <item>
-       <widget class="QComboBox" name="productsCombo"/>
+       <widget class="QComboBox" name="productsCombo">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLabel" name="testsListLabel">
@@ -82,6 +86,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="startTestingButton">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
          <string>Start Testing</string>
         </property>
